[metadata]
name = Django-Query-Graph
# version = attr: djqg.__version__

url = GitHub.com/Django-AI/Django-Query-Graph
download_url = GitHub.com/Django-AI/Django-Query-Graph/archive/main.zip

author = STEAM for Vietnam Foundation: AI & Robotics Educational Initiative
author_email = Edu.AI@STEAMforVietNam.org
maintainer = STEAM for Vietnam Foundation: AI & Robotics Educational Initiative
maintainer_email = Edu.AI@STEAMforVietNam.org

classifiers =

license = MIT

description = Django Model Query Graph
long_description = file: README.md
long_description_content_type = text/markdown

keywords =
  Django
  query
  graph


[options]
zip_safe = False

setup_requires =

install_requires =

python_requires = >= 3.8

scripts =

include_package_data = True

packages = find:

package_dir =
  =src

namespace_packages =

py_modules =
  djqg


[options.packages.find]
where = src
exclude =
include =
  *
